--- a/study/html5/html5_form.html
+++ b/study/html5/html5_form.html
@@ -7,7 +7,16 @@
     <body>
         <form action="form.php">
             <input type="number" min="10" max="15">
-
+            <input type="date" name="datev">
+            <input type="monty" name="monthv">
+            <input type="week" name="weekv">
+            <input type="time" name="timev">
+            <input type="email" name="emailv">
+            <input type="search" name="searchv">
+            <input type="tel" name="telv">
+            <input type="url" name="urlv">
+            <input type="range" name="rangev" min="0" max="10">
+            <input type="submit">
 
         </form>
     </body>
