--- a/study/css/background/background.html
+++ b/study/css/background/background.html
@@ -9,7 +9,7 @@
                 width: 500px; height:500px;
                 border: 1px solid red;
                 background-color: yellow;
-                background-image:url(./고냥이.jpeg);
+                background-image:url(./rose.jpeg);
 
                 /* 이미지가 반복된다 -> repeat속성의 기본 값인 repeat을 
                 no-repeat으로 바꿔준다.*/
